# haskell-first-principles

./: .gitignore  README.md
14-addition/: addition.cabal  addition.hs
17-applicative-laws/: stack.yaml
17-applicative-laws/applicative-laws/: .gitignore  ChangeLog.md  package.yaml
17-applicative-laws/applicative-laws/app/: Main.hs
21-morse/morse/: README.md  morse.cabal
21-morse/morse/src/: Main.hs  Morse.hs
21-morse/morse/tests/: tests.hs
exercises/: 10.database-processing.hs  10.exercises.hs  11.as-pattern.hs  11.binary-tree.hs  11.books.hs  11.garden-grow.hs  11.hutton.hs  11.language.hs  11.misc.hs  11.phone.hs  11.programmer.hs  11.type-and-data.hs  12.btree.hs  12.exercises.hs  12.maybe.hs  12.messing-round.hs  12.natural.hs  12.unfold.hs  12.words.hs  14.monoid-laws.hs  15.maybe-monoid.hs  15.monoid.hs  15.optional-monoid.hs  15.semigroup.hs  16.10-exercises.hs  16.chapter-exercises.hs  16.functor-misc.hs  16.possibly.hs  16.sum.hs  16.wrap-functor.hs  17.applicative-laws.hs  17.applicative-list.hs  17.applicative-ziplist.hs  17.applicative.hs  17.exercises-a.hs  17.exercises-combinations.hs  17.exercises.hs  17.lookups.hs  17.ziplist.hs  18.bind.hs  (+79 more)
misc/: arbitrariness.hs
