name:                morse
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/morse#readme
license:             BSD3
license-file:        LICENSE
author:              Mark Cheeseman
maintainer:          
copyright:           2018 Mark Cheeseman
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:  Morse
  ghc-options:      -Wall -fwarn-tabs
  build-depends:    base >=4.7 && <5
                      , containers
                      , QuickCheck
  hs-source-dirs:   src
  default-language: Haskell2010

executable morse
  hs-source-dirs:      src
  ghc-options:         -Wall -fwarn-tabs
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                        , containers
                        , morse
                        , QuickCheck

test-suite tests
  ghc-options:          -Wall -fno-warn-orphans
  type:                 exitcode-stdio-1.0
  main-is:              tests.hs
  hs-source-dirs:       tests
  build-depends:        base
                          , containers
                          , morse
                          , QuickCheck
  default-language:     Haskell2010
